--- a/src/App.css
+++ b/src/App.css
@@ -9,11 +9,74 @@
     justify-content: center;
     align-items: center;
 } */
-button{
+button {
     margin-right: 10px;
 }
-body{
+
+body {
     font-family: "Poppins", sans-serif;
     font-weight: 400;
 }
 
+input[type='Checkbox'] {
+    box-sizing: border-box;
+    position: relative;
+    margin-top: 3px;
+    -webkit-appearance: none;
+    width: 36px;
+    height: 20px;
+    appearance: none;
+    background-color: transparent;
+    outline: none;
+    border-radius: 16px;
+    background-color: #747475;
+    outline: none;
+    transition: 0.3s;
+    padding: 2px 3px;
+    cursor: pointer;
+}
+
+input[type='Checkbox']:checked {
+    background-image: linear-gradient(to right, rgb(109, 40, 217), rgb(129, 140, 248));
+}
+
+input[type='Checkbox']::before {
+    content: '';
+    position: absolute;
+    width: 16px;
+    height: 16px;
+    background-color: white;
+    border-radius: 50%;
+    transition: 0.5s;
+    z-index: 10;
+    transition: 0.5s;
+    margin-top: -0.3px;
+}
+
+input[type='Checkbox']:checked::before {
+    left: 17px;
+  }
+
+
+input[type=range]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 15px;
+    height: 15px;
+    background-color: #00ff0d;
+    border-radius: 50%;
+    margin-top: -6px;
+    cursor: pointer;
+
+}
+
+input[type=range]::-webkit-slider-runnable-track {
+    width: 100%;
+    height: 3px;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+input[type=range] {
+    width: 100%;
+}
